--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.4.0",
     "start": "^5.1.0",
     "style-loader": "^0.21.0",
+    "webpack": "^4.16.5",
     "webpack-cli": "^2.1.4"
   },
   "devDependencies": {
