--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.11",
+    "cssnano": "^4.0.5",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "mockjs": "^1.0.1-beta3",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "prop-types": "^15.6.1",
     "px2rem": "^0.5.0",
     "px2rem-loader": "^0.1.9",
