--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.11",
     "cssnano": "^4.0.5",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
@@ -28,7 +29,6 @@
     "react-dom": "^16.4.0",
     "start": "^5.1.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.16.5",
     "webpack-cli": "^2.1.4"
   },
   "devDependencies": {
