--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.4.0",
     "start": "^5.1.0",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.1.1",
     "webpack-cli": "^2.1.4"
   },
   "devDependencies": {
