--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "start": "^5.1.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.1.1",
+    "webpack": "^4.17.2",
     "webpack-cli": "^2.1.4"
   },
   "devDependencies": {
