--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.49",
+    "@babel/traverse": "^7.1.0",
     "antd": "^3.5.4",
     "axios": "^0.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
